fixed x overflow

--- a/design/main.css
+++ b/design/main.css
@@ -83,6 +83,8 @@ h1{
     gap: 34px;
     padding-bottom: 120px;
     margin-bottom:100px ;    
+    padding-right: 0px;
+    padding-left: 0px;
     
 }
 
